[package]
name = "did_planning_poker"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayref = "0.3"
base58 = "0.2.0"
didcomm-rs = "0.7.2"
didcomm_mediator = { git = "https://github.com/chriamue/didcomm-mediator" }
did-key = "*"
ed25519-dalek = { version = "1.0" }
hex = { version = "0.4.3", features = ["serde"] }
http = "0.2.7"
rand_core = "0.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.17", features = ["full"] }
tokio-tungstenite = "0.17.1"
uuid = { version = "1", features = ["v4"] }
url = "2.2"
x25519-dalek = "1.1"
wasm-bindgen = "0.2"
js-sys = "0.3.57"
