[package]
name = "did_planning_poker"
version = "0.1.0"
edition = "2018"

[lib]
name = "did_planning_poker"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "ping"
required-features = ["bin"]

[features]
default = []
bin = ["tokio"]

[dependencies]
base58 = "0.2.0"
didcomm-rs = { version = "0.7.2", git = "https://github.com/decentralized-identity/didcomm-rs" }
didcomm_mediator = { git = "https://github.com/chriamue/didcomm-mediator", default-features = false }
did-key = "*"
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.5.0", features = ["full"], optional = true }
uuid = { version = "1", features = ["serde", "v4"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4" }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
